--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -25,11 +25,36 @@
   font-size: 0.7em;
 }
 
-
-
 #home aside{
   margin-top: 5em;
 }
+
+#historia{
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+  align-items: center;
+}
+
+#historia main{
+  max-width: 50%;
+  padding: 2em;
+  margin: 2em;
+  font-size: 2em;
+}
+
+#historia main p{
+  padding-top: 2em;
+  padding-bottom: 2em;
+  font-size: 0.7em;
+}
+
+#historia aside{
+  margin-top: 5em;
+}
+
+
+
 
 footer{
   text-align: center;
