--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -58,4 +58,9 @@
 
 footer{
   text-align: center;
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;   /* Height of the footer */
+  background:#596886;
 }
