Corregido el botón de submit que antes no se veía

--- a/webapp/src/pages/styles/signup.css
+++ b/webapp/src/pages/styles/signup.css
@@ -15,8 +15,11 @@
     position: relative;
     left: 50%;
     transform: translate(-50%, 20%);
-    padding: 20px;
     box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.4);
+}
+
+#form p{
+    padding-top: 2em;
 }
 
 form{
