--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -64,3 +64,7 @@ footer{
   height:60px;   /* Height of the footer */
   background:#596886;
 }
+
+.product{
+  box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.4);
+}
