Corregido algunos conflictos

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -53,8 +53,10 @@
   margin-top: 5em;
 }
 
-footer{
-  text-align: center;
+#signupView{
+  background-image: url("images/fondoComida.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 /*Listado Productos */
@@ -136,11 +138,10 @@ footer{
   
 footer{
   text-align: center;
-  position:absolute;
+  
   bottom:0;
   width:100%;
   height:60px;   /* Height of the footer */
-  background:#596886;
 }
 
 .product{
