--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -38,28 +38,19 @@
 
 #historia main{
   max-width: 50%;
-  padding-left: 1em;
-  margin: 1em;
+  padding: 2em;
+  margin: 2em;
   font-size: 2em;
 }
 
 #historia main p{
-  padding: 1em;
+  padding-top: 2em;
+  padding-bottom: 2em;
   font-size: 0.7em;
 }
 
 #historia aside{
-  margin-top: 0.5em;
-}
-
-#desarrolladores{
-  margin-left: 3.5em;
-  font-size: 1.5em;
-}
-
-#desarrolladores h2{
-  color: rgb(40, 69, 122);
-  font-size: 1.6em;
+  margin-top: 5em;
 }
 
 #signupView{
@@ -87,8 +78,8 @@
 
 #listadoProducto #basic-button{
   font-size: 1em;
-  margin-left: 80%;
-  margin-top: -20%;
+  margin-left: 33%;
+  margin-top: -10%;
 }
 
 #listadoProducto #comida{
@@ -116,8 +107,7 @@
 
 #paginacion{
   font-size: 2.3em;
-  margin-left: 35%;
-  margin-right: 5%;
+  margin-left: 25%;
 }
 
 #filtros{
@@ -156,8 +146,4 @@ footer{
 
 .product{
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.4);
-}
-
-img #detalles{
-  float: center;
 }
