--- a/webapp/src/pages/styles/signup.css
+++ b/webapp/src/pages/styles/signup.css
@@ -1,20 +1,20 @@
 
 
 #signupView{
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
     gap: 5em;
     height: 850px;
     
 }
 
 #form{
-    width: 50%;
-    height: 90%;
+    width: 80%;
     text-align: center;
     position: relative;
-    left: 30%;
-    transform: translate(-50%, 5%);
+    left: 50%;
+    transform: translate(-50%, 20%);
     box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.4);
 }
 
