Mejorado los productos del carrito y añadido varias pruebas de Frontend

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -154,8 +154,11 @@ footer{
   height:60px;   /* Height of the footer */
 }
 
-.product{
+.cartItem{
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.4);
+  padding: 1em;
+  margin: 1em;
+  font-size: 2em;
 }
 
 img #detalles{
