--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -62,6 +62,14 @@
   font-size: 1.6em;
 }
 
+#desarrolladores span{
+  font-size: 1em;
+}
+
+#desarrolladores p{
+  font-size: 0.75em;
+}
+
 #signupView{
   background-image: url("images/fondoComida.jpg");
   background-repeat: no-repeat;
