--- a/webapp/src/pages/styles/profile.css
+++ b/webapp/src/pages/styles/profile.css
@@ -1,30 +1,26 @@
 #profile {
-    font-family: sans-serif;
-    text-align: center;
-    padding: 3em;
-    align-items: center;
-    
-  }
-  
-
-.card{
-    max-width: 600px;
-    margin: auto;
-    transition: 0.3s;
-    box-shadow: 0 8px 40px -12px rgba(0,0,0,0.3);
+	font-family: sans-serif;
+	text-align: center;
+	padding: 3em;
+	align-items: center;
 }
 
-.card:hover{
-    box-shadow: 0 16px 70px -12.125px rgba(0,0,0,0.3);
+.card {
+	max-width: 600px;
+	margin: auto;
+	transition: 0.3s;
+	box-shadow: 0 8px 40px -12px rgba(0, 0, 0, 0.3);
 }
 
-.avatar{
-    border: 2px solid white;
-    margin:auto;
+.card:hover {
+	box-shadow: 0 16px 70px -12.125px rgba(0, 0, 0, 0.3);
 }
 
-.alert{
-    max-width: 250px;
-
+.avatar {
+	border: 2px solid white;
+	margin: auto;
 }
 
+.alert {
+	max-width: 250px;
+}
